Possibility to activate nests individually in ref

--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1127,16 +1127,16 @@
           get_output.print generate_mocks
           get_output.print decl_ref
           get_output.print init
-          get_output.print first_nest
-          # get_output.print second_nest
-          # get_output.print third_nest
-          # get_output.print fourth_nest
-          # get_output.print fifth_nest
-          # get_output.print sixth_nest
-          # get_output.print seventh_nest
-          # get_output.print eighth_nest
-          # get_output.print nineth_nest
-          # get_output.print tenth_nest
+          get_output.print first_nest if opts[:nests].include? 1
+          get_output.print second_nest if opts[:nests].include? 2
+          get_output.print third_nest if opts[:nests].include? 3
+          get_output.print fourth_nest if opts[:nests].include? 4
+          get_output.print fifth_nest if opts[:nests].include? 5
+          get_output.print sixth_nest if opts[:nests].include? 6
+          get_output.print seventh_nest if opts[:nests].include? 7
+          get_output.print eighth_nest if opts[:nests].include? 8
+          get_output.print nineth_nest if opts[:nests].include? 9
+          get_output.print tenth_nest if opts[:nests].include? 10
           get_output.print "end subroutine nsi_element_assembly_split_oss"
           return k
           end  
@@ -1303,73 +1303,6 @@ EOF
           nbdfp_nsi = 3
         #+END_SRC
       - Runing kernel
-        #+BEGIN_SRC ruby :tangle /tmp/alya.rb
-          k_orig = generate_ref(vector_size)
-          k_orig.build(:FCFLAGS => "-cpp")
-
-          k_boast = generate_boast_implem(vector_size)
-          puts k_boast
-          k_boast.build
-
-          1.times{
-            gpden = NArray.float(vector_size,pgaus).random
-            gpvis = NArray.float(vector_size,pgaus).random
-            gppor = NArray.float(vector_size,pgaus).random 
-            gpsp1 = NArray.float(vector_size,pgaus).random 
-            gpsp2 = NArray.float(vector_size,pgaus).random 
-            gpvol = NArray.float(vector_size,pgaus).random 
-            gpsha = NArray.float(vector_size,pnode,pgaus).random 
-            gpcar = NArray.float(vector_size,ndime,mnode,pgaus).random
-            gpadv = NArray.float(vector_size,ndime,pgaus).random 
-            gpvep = NArray.float(vector_size,ndime,pgaus).random 
-            gpprp = NArray.float(vector_size,pgaus).random 
-            gpgrp = NArray.float(vector_size,ndime,pgaus).random 
-            gprhs = NArray.float(vector_size,ndime,pgaus).random 
-            gpvel = NArray.float(vector_size,ndime,pgaus,10).random #dynamic
-            gpsgs = NArray.float(vector_size,ndime,pgaus,10).random #dynamic 
-            elvel = NArray.float(vector_size,ndime,pnode,10).random #dynamic
-            dtinv_loc = NArray.float(vector_size).random
-            dtsgs = NArray.float(vector_size).random
-
-            wgrgr_ref = NArray.float(vector_size,pnode,pnode,pgaus)
-            agrau_ref = NArray.float(vector_size,pnode,pgaus)
-            elauu_ref = NArray.float(vector_size,pnode*ndime,pnode*ndime)
-            elaup_ref = NArray.float(vector_size,pnode*ndime,pnode)
-            elapp_ref = NArray.float(vector_size,pnode,pnode)
-            elapu_ref = NArray.float(vector_size,pnode,pnode*ndime)
-            elrbu_ref = NArray.float(vector_size,ndime,pnode)
-            elrbp_ref = NArray.float(vector_size,pnode)
-
-            wgrgr_boast = NArray.float(vector_size,pnode,pnode,pgaus)
-            agrau_boast = NArray.float(vector_size,pnode,pgaus)
-            elauu_boast = NArray.float(vector_size,pnode*ndime,pnode*ndime)
-            elaup_boast = NArray.float(vector_size,pnode*ndime,pnode)
-            elapp_boast = NArray.float(vector_size,pnode,pnode)
-            elapu_boast = NArray.float(vector_size,pnode,pnode*ndime)
-            elrbu_boast = NArray.float(vector_size,ndime,pnode)
-            elrbp_boast = NArray.float(vector_size,pnode)
-
-            k_orig.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
-                       gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
-                       gpgrp,gprhs,gpvel,gpsgs,wgrgr_ref,agrau_ref,elvel,elauu_ref,
-                       elaup_ref,elapp_ref,elapu_ref,elrbu_ref,elrbp_ref,dtinv_loc,dtsgs,
-                       fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
-
-            # puts agrau_ref[agrau_ref.length-1]
-            puts "orig = " + agrau_ref.to_s
-
-            k_boast.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
-                        gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
-                        gpgrp,gprhs,gpvel,gpsgs,wgrgr_boast,agrau_boast,elvel,elauu_boast,
-                        elaup_boast,elapp_boast,elapu_boast,elrbu_boast,elrbp_boast,dtinv_loc,dtsgs,
-                        fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
-
-            # puts agrau_boast[agrau_boast.length-1]
-            puts "boast = " +  agrau_boast.to_s
-
-          }
-        #+END_SRC
-
         #+BEGIN_SRC ruby
           require '/tmp/alya.rb'
 
@@ -1442,8 +1375,8 @@ EOF
                      elaup_ref,elapp_ref,elapu_ref,elrbu_ref,elrbp_ref,dtinv_loc,dtsgs,
                      fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
 
-          # puts agrau_ref[agrau_ref.length-1]
-          puts "orig = " + agrau_ref.to_s
+          # # puts agrau_ref[agrau_ref.length-1]
+          # puts "orig = " + agrau_ref.to_s
 
           k_boast.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
                       gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
@@ -1451,8 +1384,8 @@ EOF
                       elaup_boast,elapp_boast,elapu_boast,elrbu_boast,elrbp_boast,dtinv_loc,dtsgs,
                       fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
 
-          # puts agrau_boast[agrau_boast.length-1]
-          puts "boast = " +  agrau_boast.to_s
+          # # puts agrau_boast[agrau_boast.length-1]
+          # puts "boast = " +  agrau_boast.to_s
 
           agrau_ref == agrau_boast
           
@@ -1460,7 +1393,6 @@ EOF
 
         #+RESULTS:
         : true
-
 
         1
         #+RESULTS:
