--- a/org/Labbook.org
+++ b/org/Labbook.org
@@ -1297,6 +1297,7 @@
           k_orig.build(:FCFLAGS => "-cpp")
 
           set_lang(FORTRAN)
+          set_fortran_line_length(120)
           k_boast = generate_boast_implem(k_boast_params)
           puts k_boast
           k_boast.build
@@ -1312,62 +1313,70 @@
           kfl_sgsti_nsi = 1
           nbdfp_nsi = 3
 
-          NArray.srand(10)
+          stats_boast = []
+          stats_ref = []
 
-          gpden = NArray.float(vector_size,pgaus).random
-          gpvis = NArray.float(vector_size,pgaus).random
-          gppor = NArray.float(vector_size,pgaus).random 
-          gpsp1 = NArray.float(vector_size,pgaus).random 
-          gpsp2 = NArray.float(vector_size,pgaus).random 
-          gpvol = NArray.float(vector_size,pgaus).random 
-          gpsha = NArray.float(vector_size,pnode,pgaus).random 
-          gpcar = NArray.float(vector_size,ndime,mnode,pgaus).random
-          gpadv = NArray.float(vector_size,ndime,pgaus).random 
-          gpvep = NArray.float(vector_size,ndime,pgaus).random 
-          gpprp = NArray.float(vector_size,pgaus).random 
-          gpgrp = NArray.float(vector_size,ndime,pgaus).random 
-          gprhs = NArray.float(vector_size,ndime,pgaus).random 
-          gpvel = NArray.float(vector_size,ndime,pgaus,10).random #dynamic
-          gpsgs = NArray.float(vector_size,ndime,pgaus,10).random #dynamic 
-          elvel = NArray.float(vector_size,ndime,pnode,10).random #dynamic
-          dtinv_loc = NArray.float(vector_size).random
-          dtsgs = NArray.float(vector_size).random
+          #NArray.srand(10)
+          100.times{|i|
+            gpden = NArray.float(vector_size,pgaus).random
+            gpvis = NArray.float(vector_size,pgaus).random
+            gppor = NArray.float(vector_size,pgaus).random 
+            gpsp1 = NArray.float(vector_size,pgaus).random 
+            gpsp2 = NArray.float(vector_size,pgaus).random 
+            gpvol = NArray.float(vector_size,pgaus).random 
+            gpsha = NArray.float(vector_size,pnode,pgaus).random 
+            gpcar = NArray.float(vector_size,ndime,mnode,pgaus).random
+            gpadv = NArray.float(vector_size,ndime,pgaus).random 
+            gpvep = NArray.float(vector_size,ndime,pgaus).random 
+            gpprp = NArray.float(vector_size,pgaus).random 
+            gpgrp = NArray.float(vector_size,ndime,pgaus).random 
+            gprhs = NArray.float(vector_size,ndime,pgaus).random 
+            gpvel = NArray.float(vector_size,ndime,pgaus,10).random #dynamic
+            gpsgs = NArray.float(vector_size,ndime,pgaus,10).random #dynamic 
+            elvel = NArray.float(vector_size,ndime,pnode,10).random #dynamic
+            dtinv_loc = NArray.float(vector_size).random
+            dtsgs = NArray.float(vector_size).random
 
-          wgrgr_ref = NArray.float(vector_size,pnode,pnode,pgaus)
-          agrau_ref = NArray.float(vector_size,pnode,pgaus)
-          elauu_ref = NArray.float(vector_size,pnode*ndime,pnode*ndime)
-          elaup_ref = NArray.float(vector_size,pnode*ndime,pnode)
-          elapp_ref = NArray.float(vector_size,pnode,pnode)
-          elapu_ref = NArray.float(vector_size,pnode,pnode*ndime)
-          elrbu_ref = NArray.float(vector_size,ndime,pnode)
-          elrbp_ref = NArray.float(vector_size,pnode)
+            wgrgr_ref = NArray.float(vector_size,pnode,pnode,pgaus)
+            agrau_ref = NArray.float(vector_size,pnode,pgaus)
+            elauu_ref = NArray.float(vector_size,pnode*ndime,pnode*ndime)
+            elaup_ref = NArray.float(vector_size,pnode*ndime,pnode)
+            elapp_ref = NArray.float(vector_size,pnode,pnode)
+            elapu_ref = NArray.float(vector_size,pnode,pnode*ndime)
+            elrbu_ref = NArray.float(vector_size,ndime,pnode)
+            elrbp_ref = NArray.float(vector_size,pnode)
 
-          wgrgr_boast = NArray.float(vector_size,pnode,pnode,pgaus)
-          agrau_boast = NArray.float(vector_size,pnode,pgaus)
-          elauu_boast = NArray.float(vector_size,pnode*ndime,pnode*ndime)
-          elaup_boast = NArray.float(vector_size,pnode*ndime,pnode)
-          elapp_boast = NArray.float(vector_size,pnode,pnode)
-          elapu_boast = NArray.float(vector_size,pnode,pnode*ndime)
-          elrbu_boast = NArray.float(vector_size,ndime,pnode)
-          elrbp_boast = NArray.float(vector_size,pnode)
+            wgrgr_boast = NArray.float(vector_size,pnode,pnode,pgaus)
+            agrau_boast = NArray.float(vector_size,pnode,pgaus)
+            elauu_boast = NArray.float(vector_size,pnode*ndime,pnode*ndime)
+            elaup_boast = NArray.float(vector_size,pnode*ndime,pnode)
+            elapp_boast = NArray.float(vector_size,pnode,pnode)
+            elapu_boast = NArray.float(vector_size,pnode,pnode*ndime)
+            elrbu_boast = NArray.float(vector_size,ndime,pnode)
+            elrbp_boast = NArray.float(vector_size,pnode)
 
-          k_orig.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
-                     gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
-                     gpgrp,gprhs,gpvel,gpsgs,wgrgr_ref,agrau_ref,elvel,elauu_ref,
-                     elaup_ref,elapp_ref,elapu_ref,elrbu_ref,elrbp_ref,dtinv_loc,dtsgs,
-                     fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
+            stats_ref[i] = k_orig.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
+                                   gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
+                                   gpgrp,gprhs,gpvel,gpsgs,wgrgr_ref,agrau_ref,elvel,elauu_ref,
+                                   elaup_ref,elapp_ref,elapu_ref,elrbu_ref,elrbp_ref,dtinv_loc,dtsgs,
+                                   fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
 
-          k_boast.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
-                      gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
-                      gpgrp,gprhs,gpvel,gpsgs,wgrgr_boast,agrau_boast,elvel,elauu_boast,
-                      elaup_boast,elapp_boast,elapu_boast,elrbu_boast,elrbp_boast,dtinv_loc,dtsgs,
-                      fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
+            stats_boast[i] = k_boast.run(ndime,mnode,pnode,pgaus,pevat,gpden,gpvis,gppor,
+                                      gpsp1,gpsp2,gpvol,gpsha,gpcar,gpadv,gpvep,gpprp,
+                                      gpgrp,gprhs,gpvel,gpsgs,wgrgr_boast,agrau_boast,elvel,elauu_boast,
+                                      elaup_boast,elapp_boast,elapu_boast,elrbu_boast,elrbp_boast,dtinv_loc,dtsgs,
+                                      fvins_nsi,kfl_lumped,kfl_limit_nsi,kfl_sgsti_nsi,nbdfp_nsi)
 
-          agrau_ref == agrau_boast
-
+            agrau_boast == agrau_ref
+          }
+          t = []
+          t[1] = stats_ref.inject(0){|sum,e| sum+e[:duration]} / stats_ref.length
+          t[2] = stats_boast.inject(0){|sum,e| sum+e[:duration]} / stats_boast.length
+          t
         #+END_SRC
 
         #+RESULTS:
+        | hline | 1.8121400000000013e-06 | 6.5738e-07 |
 
 * Sandbox :noexport:
 ** Fortran
